--- a/README.Rmd
+++ b/README.Rmd
@@ -60,4 +60,8 @@ doc <- read_xml(txt)
 
 xml_view(doc, style="obsidian")
 xml_view(xml_find_all(doc, ".//to"), style="github-gist")
+
+xml_view(read_xml(system.file("extdata/dwml.xml", package="xmlview")))
+xml_view(read_xml(system.file("extdata/getHistory.xml", package="xmlview")), "androidstudio")
+xml_view(read_xml(system.file("extdata/input.xml", package="xmlview")), "sunburst")
 ```
