--- a/README.Rmd
+++ b/README.Rmd
@@ -36,6 +36,7 @@ Please `devtools::install_github("ramnathv/htmlwidgets")` for this as we're now 
 
 ### News
 
+- Version 0.4.1 : Fixed bug in R-code generation for firefox & linux RStudio Desktop viewer
 - Version 0.4.0 : Enable passing in an initial XPath query string
 - Version 0.3.3 : Code cleanup
 - Version 0.3.2 : Works with Firefox now 
